--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -18,8 +18,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B clean site --file pom.xml
+      run: mvn -B site site:stage
     - name: Deploy Site
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        folder: target/site
+        folder: target/staging
