--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+
 jobs:
   build:
 
@@ -23,3 +26,4 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: target/staging
+        token:
