--- a/spring-jdbc-oracle-core/pom.xml
+++ b/spring-jdbc-oracle-core/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>io.github.ngocnhan-tran1996</groupId>
     <artifactId>spring-jdbc-oracle</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${revision}</version>
   </parent>
 
   <artifactId>spring-jdbc-oracle-core</artifactId>
