--- a/.github/workflows/java22_maven.yml
+++ b/.github/workflows/java22_maven.yml
@@ -1,4 +1,4 @@
-name: Java 21 with Maven
+name: Java 22 with Maven
 
 on:
   push:
@@ -20,4 +20,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package
+      run: mvn -B package -DskipTests
