--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -14,14 +14,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 21
+    - name: Set up JDK 22
       uses: actions/setup-java@v3
       with:
-        java-version: '21'
+        java-version: '22'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B site site:stage
+      run: mvn -B site site:stage -DskipTests
     - name: Deploy Site
       uses: JamesIves/github-pages-deploy-action@v4
       with:
