--- a/spring-jdbc-oracle-test/pom.xml
+++ b/spring-jdbc-oracle-test/pom.xml
@@ -85,6 +85,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
+        <version>3.12.1</version>
         <configuration>
           <skip>true</skip>
         </configuration>
