--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -21,7 +21,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B site site:stage -DskipTests
+      run: mvn -pl !spring-jdbc-oracle-test -B site site:stage
     - name: Deploy Site
       uses: JamesIves/github-pages-deploy-action@v4
       with:
